app/src/main/java/com/example/ecommerce/core/errors/ConnectionException.kt
package com.example.ecommerce.core.errors

class ConnectionException(message:String) : RuntimeException(message)
